# Sinsy-Remix

./: .gitignore  .travis.yml  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  Sinsy-Remix.sln  Sinsy-Remix.vcxproj  Sinsy-Remix.vcxproj.filters  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
dic/: LICENSE_FOR_ENGLISH_DICT  Makefile  Makefile.am  Makefile.in  chinese.big_5.conf  chinese.big_5.table  chinese.conf  chinese.gbk.conf  chinese.gbk.table  chinese.table  chinese.utf_8.conf  chinese.utf_8.table  english.conf  english.table  zh_CN.dict
hts_engine_API/: Makefile  Makefile.in  config.status  configure
hts_engine_API/include/: HTS_engine.h
hts_engine_API/lib/: HTS_engine.c  HTS_gstream.c  HTS_hidden.h  HTS_label.c  HTS_pstream.c  Makefile  Makefile.in
include/: sinsy.h
lib/: Makefile  Makefile.am  Makefile.in  Sinsy.cpp
lib/.deps/: Sinsy.Po
lib/chinese/: CConf.cpp
lib/chinese/.deps/: CConf.Po
lib/converter/: ConfManager.cpp  ConfManager.h
lib/converter/.deps/: ConfGroup.Po  ConfManager.Po  Converter.Po  PhonemeInfo.Po  UnknownConf.Po  util_converter.Po
lib/english/: EConf.cpp  EConf.h
lib/hts_engine_API/: HtsEngine.cpp  HtsEngine.h  SynthConditionImpl.cpp  SynthConditionImpl.h
lib/hts_engine_API/.deps/: HtsEngine.Po  SynthConditionImpl.Po
lib/japanese/.deps/: JConf.Po
lib/label/: LabelMaker.cpp  LabelMaker.h
lib/label/.deps/: LabelData.Po  LabelMaker.Po  LabelMeasure.Po  LabelStream.Po  (+6 more)
lib/util/: Configurations.cpp  MacronTable.cpp  PhonemeTable.cpp  util_types.h
(+26 files in other folders)
