
EXTRA_DIST = japanese.euc_jp.conf japanese.euc_jp.table japanese.shift_jis.conf japanese.shift_jis.table japanese.utf_8.conf japanese.utf_8.table japanese.macron chinese.utf_8.conf chinese.utf_8.table chinese.gbk.conf chinese.gbk.table chinese.big_5.conf chinese.big_5.table chinese.macron

DISTCLEANFILES = *.log *.out *~

MAINTAINERCLEANFILES = Makefile.in

dicdir = @prefix@/dic

dic_DATA = japanese.euc_jp.conf japanese.euc_jp.table japanese.shift_jis.conf japanese.shift_jis.table japanese.utf_8.conf japanese.utf_8.table japanese.macron chinese.utf_8.conf chinese.utf_8.table chinese.gbk.conf chinese.gbk.table chinese.big_5.conf chinese.big_5.table chinese.macron
